--- a/packages/data/pubspec.yaml
+++ b/packages/data/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   connectivity: ^3.0.3
   firebase_core: ^1.0.4
   firebase_auth: ^1.1.1
-  firebase_storage: ^8.0.4
+  cloud_firestore: ^2.1.0
 
   # Personal packages
   domain:
